<resources>
    <string name="app_name">SYM - Labo 4</string>

    <string name="nav_4">Capteurs</string>
    <string name="nav_5">BLE</string>

    <string name="ble_menu_search">Recherche</string>
    <string name="ble_menu_disconnect">Déconnexion</string>

    <string name="ble_empty">Veuillez lancer le scan <i>Bluetooth Low Energy</i> en appuyant ci-dessus</string>

    <string name="ble_currenttime_title">Current time</string>
    <string name="ble_currenttime_set">Set time</string>
    <string name="ble_clickcounter_title">Click counter</string>
    <string name="ble_temperature_title">Température</string>
    <string name="ble_temperature_read">Read</string>

    <string name="ble_sendvalue_title">Envoi de valeur</string>
    <string name="ble_sendvalue_send">Send</string>

    <string name="btn_get_temperature">afficher la température</string>
    <string name="btn_integer">envoyer le nombre</string>
    <string name="edit_integer">entrez un entier</string>

    <string name="waiting_data"> en attente ...</string>
    <string name="text_label_current_tim">heure : </string>
    <string name="text_label_label_nbBtnClicked">Boutons clickés : </string>
    <string name="btn_update_time">mettre à jour l\'heure</string>

</resources>
